# faux

./: .gitignore  LICENSE  README.md  chatbot.html  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: generate.py  health.py  providers.py  submissions.py  usage.py
backend/app/classifiers/: fuzzy.py  patterns.py  pipeline.py  rules.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/generators/: data_generator.py  faker_map.py  llm_generator.py  pricing.py
backend/app/generators/providers/: __init__.py  anthropic_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/app/models/: schemas.py
backend/app/services/: embedding.py  rag.py
docs/: ARCHITECTURE.md  LLM_COST_BENCHMARK.md
extension/: dist.crx  dist.pem  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: manifest.json
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/content/analyzer/: classifier.ts  discovery.ts
extension/src/content/filler/: value-injector.ts
extension/src/popup/: App.tsx  index.html  popup.css
extension/src/popup/components/: AccountTab.tsx  FieldList.tsx  ProfileEditor.tsx  SectionList.tsx  SettingsTab.tsx  StatusBar.tsx  TabBar.tsx
extension/src/shared/: constants.ts  messages.ts  settings.ts  types.ts
